# afp

./: .gitignore  README.md  afp.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: test_afp.py
